spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ nav {
   text-decoration-color: #ffb512;
 }
 .whyus-advantage {
-  font-weight: 350;
+  font-weight: 550;
   color: #ffb512;
 }
 .whyus-li {
